tests/lexer/invalid/06_invalid_identifier.src
// Неправильные идентификаторы
123abc
a@b
a#b
a$b